--- a/frontend/src/components/HomePage/HomePage.module.css
+++ b/frontend/src/components/HomePage/HomePage.module.css
@@ -1,5 +1,6 @@
 .mainDiv {
     display: flex;
+    margin: auto;
     justify-content: center;
     flex-direction: column;
     box-sizing: content-box;
@@ -119,4 +120,12 @@
 .miniText {
     font-size: 16px;
     text-align: center;
+}
+.link{
+    text-decoration-line: none;
+}
+
+
+.link:hover{
+  border-bottom: 1px #008294;
 }
