--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,6 +1,5 @@
 .navbar {
     display: flex;
-    position: fixed;
     background-color: white;
     top: 0;
     right: 0;
@@ -17,6 +16,7 @@
     display: flex;
     align-items: center;
     margin-right: 40px;
+    cursor: pointer;
 }
 
 .logo {
@@ -26,8 +26,10 @@
 
 .logged-in {
     border-bottom: 1px solid black;
+
 }
 
 .logged-out {
     border-bottom: none;
+
 }
