--- a/frontend/src/components/Groups/Groups.css
+++ b/frontend/src/components/Groups/Groups.css
@@ -3,26 +3,48 @@
     display: flex;
     flex-direction: row;
     width: 640px;
-    height: 200px;
-    padding: 20px 5px 0px 5px;
+    height: 150px;
+    padding: 20px 0px 0px 0px;
 }
+
+.top-container {
+    display: flex;
+    flex-direction: row;
+    padding: 20px 0px 20px 0px;
+}
+
+.top-link {
+    padding: 5px 5px 5px 5px;
+    font-size: 20px;
+    color: grey;
+    font-weight: bold;
+}
+
+.top-link-underlined{
+    border-bottom: 3px solid #008294;
+    color:#008294
+}
+/* .top-link:hover{
+    color: #008294;
+} */
 
 .group-left {
     display: flex;
     width: 180px;
     height: 100px;
+    padding: 0px 10px 0px 0px;
 }
 
-.group-left>image {
-    width: 240px;
+.group-left>img {
+    width: 170px;
 }
 
-.image{
+.image {
     border-radius: 5px;
 }
 
 .map-container {
-     /* border-top: 0.5px solid grey;  */
+    /* border-top: 0.5px solid grey;  */
     width: 1000px;
     margin: auto;
 }
@@ -41,18 +63,28 @@
     color: grey;
     font-size: 14px;
     font-weight: bold;
-    margin-bottom: 15px;
+
 }
 
 .group-about {
     display: flex;
     color: grey;
     font-size: 14px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
-.group-member-pulic{
+
+.group-member-pulic {
     display: flex;
     color: grey;
     font-size: 14px;
+}
+
+.group-organizer {
+    color: grey;
+    font-size: 14px;
+}
+
+.top-link {
+    text-decoration: none;
 }
