--- a/frontend/src/components/GroupDetails/GroupDetails.css
+++ b/frontend/src/components/GroupDetails/GroupDetails.css
@@ -1,29 +1,106 @@
-.main-container{
+.main-container {
     display: flex;
     flex-direction: column;
     margin: auto;
-    width: 1100px;
+    width: 900px;
+    padding-top: 40px;
+    align-items: flex-start;
 }
 
-.top-container {
+.top-container_ {
     display: flex;
     flex-direction: row;
+    border-bottom: 0.5px solid grey;
+    padding-bottom: 20px;
+    padding-top: 10px;
 }
 
 .left-top-container {
     display: flex;
     width: 600px;
+}
+
+.big-image {
+    width: 600px;
+    height: 360px;
     border-radius: 20px;
 }
 
-.image {
-    width: 600px;
-    height: 360px;
-}
-
-.right-top-container{
+.right-top-container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     padding-left: 30px;
+}
+
+.middle-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 66px;
+    padding: 0px 0px 0px 500px;
+    border-bottom: 0.5px solid grey;
+}
+
+.bottom-container {
+    display: flex;
+    flex-direction: row;
+    background-color: rgba(247, 247, 247, 0.486);
+}
+
+.bottom-left-container {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.bottom-right-container {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.name {
+    display: flex;
+    text-align: left;
+    font-size: 32px;
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+
+.location {
+    font-size: 14px;
+}
+
+.organizer {
+    font-size: 14px
+}
+
+.members-public {
+    font-size: 14px;
+}
+
+.button {
+    display: inline-block;
+    background-color: #f357ad;
+    color: white;
+    border-radius: 5px;
+    border: #f357ad;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 600;
+    height: 40px;
+    text-align: center;
+}
+
+.button:hover {
+    background-color: #f772bb;
+}
+
+.button-container {
+    padding-left: 10px;
+}
+.notice{
+    font-size: 16px;
+    font-style: italic;
 }
