--- a/frontend/src/components/EventDetails/EventDetails.css
+++ b/frontend/src/components/EventDetails/EventDetails.css
@@ -18,10 +18,23 @@
     height: auto;
     border-radius: 10px;
     padding-bottom: 20px;
+    font-size: 16px;
+    color: grey;
 }
 
 .bottom-bar{
     display: flex;
     flex-direction: column;
     align-items: left;
+}
+.event-private{
+    font-size: 16px;
+    color: grey;
+}
+.public_{
+    font-size: 16px;
+    color: grey;
+}
+.about{
+    font-size: 16px;
 }
