--- a/frontend/src/components/EditGroupForm/EditGroup.css
+++ b/frontend/src/components/EditGroupForm/EditGroup.css
@@ -1,3 +1,4 @@
+
 .form {
     display: flex;
     flex-direction: column;
@@ -6,13 +7,11 @@
     height: auto;
     padding: 20px 20px 20px 20px;
     align-items: flex-start;
-    background-color: aliceblue;
     border-radius: 20px;
 }
 
 .label {
     font-size: 18px;
-    color: grey;
     padding-bottom: 5px;
     padding-top: 30px;
 }
@@ -20,7 +19,6 @@
 .field {
     display: flex;
     flex-direction: column;
-    color: grey;
 }
 
 .top-field {
@@ -29,7 +27,7 @@
 
 .input-box {
     width: 600px;
-    border: 2px solid#f357ad;
+
     border-radius: 10px;
     height: 20px;
     padding: 10px;
@@ -39,33 +37,31 @@
 }
 
 select {
-    width: 100%;
-    border: 2px solid #f357ad;
+    width: 600px;
+
     padding: 10px;
     border-radius: 10px;
     color: grey;
     font-size: 16px;
 }
 
-.error {
-    font-size: 16px;
-    color: rgb(248, 51, 51);
-}
 
 .top-title {
     font-size: 20px;
-    color: grey;
+
     font-weight: bold;
 }
 
 .name-details {
     font-size: 25px;
-    color: grey;
 }
 
 .title-div {
     display: flex;
     flex-direction: column;
     height: auto;
-    border-bottom: 0.5 solid grey;
+}
+
+.dropdown-option{
+    width: 624px;
 }
