--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,2 +1,51 @@
+/* TODO Add site wide styles
+* {
+    font-family: Graphik system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+input {
+    border-color: rgba(34, 34, 34, 0.1);
+    height: 3rem;
+    padding-bottom: 20px;
+
+}
+
+select {
+    border-color: rgba(34, 34, 34, 0.1);
+    padding-bottom: 20px;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+input:focus {
+    border-color: rgba(34, 34, 34, 0.1) !important;
+}
+
+button {
+    height: 3rem;
+    background-color: #f65858;
+    text-align: center;
+    color: white;
+    border-radius: 8px;
+    border: none;
+    font-weight: 700;
+}
+
+
+
+
+
 /* TODO Add site wide styles */
-*{font-family: Graphik system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif}
+* {
+    font-family: Graphik system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+ul {
+    list-style-type: none;
+    color: #f65858;
+    padding: 0px;
+}
+
+/* button:hover {
+    background-color: #f77070;
+} */
