--- a/frontend/src/components/EditGroupForm/EditGroup.css
+++ b/frontend/src/components/EditGroupForm/EditGroup.css
@@ -1,10 +1,8 @@
-
 .form {
     display: flex;
     flex-direction: column;
     margin: auto;
     width: 650px;
-    height: auto;
     padding: 20px 20px 20px 20px;
     align-items: flex-start;
     border-radius: 20px;
@@ -33,7 +31,7 @@
     padding: 10px;
     /* color: grey; */
     font-size: 16px;
-    color: grey;
+
 }
 
 select {
@@ -41,32 +39,34 @@ select {
     border-color: rgba(34, 34, 34, 0.1);
     padding: 10px;
     border-radius: 10px;
-    color: grey;
     font-size: 16px;
 }
 
 
 .top-title {
-    font-size: 20px;
-
+    font-size: 25px;
     font-weight: bold;
 }
 
 .name-details {
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .title-div {
+    width: 624px;
     display: flex;
     flex-direction: column;
     height: auto;
+    align-items: center;
+    justify-content: center;
 }
 
-.dropdown-option{
+.dropdown-option {
     width: 624px;
     border-color: rgba(34, 34, 34, 0.1);
 }
-.edit-group-button{
+
+.edit-group-button {
     width: 624px;
     height: 3rem;
     background-color: #f65858;
@@ -75,4 +75,10 @@ select {
     border-radius: 8px;
     border: none;
     font-weight: 700;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.edit-group-button:hover {
+    background-color: #f77070;
 }
