--- a/frontend/src/components/Groups/Groups.css
+++ b/frontend/src/components/Groups/Groups.css
@@ -1,9 +1,14 @@
+.group-right{
+    display: flex;
+    flex-direction: column;
+}
+
 .group-card {
     border-top: 0.5px solid grey;
     display: flex;
     flex-direction: row;
     width: 640px;
-    height: 150px;
+    height: 250px;
     padding: 20px 0px 0px 0px;
 }
 
@@ -71,6 +76,9 @@
     font-size: 14px;
     margin-top: 15px;
     margin-bottom: 15px;
+    width: 400px;
+    height: 50px;
+    overflow: hidden;
 }
 
 .group-member-pulic {
@@ -87,3 +95,8 @@
 .top-link {
     text-decoration: none;
 }
+/* .about-container{
+    display: flex;
+    overflow: hidden;
+    height: auto
+} */
