--- a/frontend/src/components/GroupDetails/GroupDetails.css
+++ b/frontend/src/components/GroupDetails/GroupDetails.css
@@ -108,3 +108,10 @@
     font-size: 16px;
     font-style: italic;
 }
+
+.place-holder-group-img{
+    width: 600px;
+    height: 360px;
+    border-radius: 20px;
+    background-color: #ddd;
+}
