--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -35,16 +35,7 @@
 }
 
 
-.profile-dropdown {
-    display: flex;
-    position: absolute;
-    flex-direction: column;
-    z-index: 52;
-    box-shadow: 0 3px 3px 3px rgba(0, 0, 0, 0.1);
-    border: 1px solid white;
-    min-width: 200px;
-    height: 100px;
-}
+
 
 .dropdown-field{
     display: flex;
@@ -116,4 +107,49 @@
 
 .new-group:hover {
     color: #0098ae;
+}
+
+.new-group-container {
+    display: flex;
+    align-items: center;
+    margin-right: 8px;
+}
+
+.profile-dropdown {
+    display: flex;
+    flex-direction: column;
+    cursor: auto;
+    position: absolute;
+    right: 0px;
+    background-color: white;
+    padding: 16px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    width: 200px;
+    box-shadow: 0px 0px 6px rgb(0 0 0 / 15%);
+}
+
+.profile-dropdown li {
+    padding: 4px 8px;
+    color: grey;
+
+}
+
+.profile-dropdown button {
+    background: none;
+    appearance: none;
+    color: #f65858;
+    border: none;
+    padding: 4px 0px;
+    font-size: 16px;
+    border-top: 1px solid grey;
+    width: 100%;
+    margin-top: 6px;
+    padding-top: 6px;
+    text-align: left;
+    cursor: pointer;
+}
+
+.button-profile {
+    position: relative;
 }
