--- a/frontend/src/components/Events/Events.css
+++ b/frontend/src/components/Events/Events.css
@@ -1,9 +1,9 @@
-.group-card {
+.event-card {
     border-top: 0.5px solid grey;
     display: flex;
     flex-direction: row;
     width: 640px;
-    height: 150px;
+    height: 160px;
     padding: 20px 0px 0px 0px;
     cursor: pointer;
 }
@@ -66,7 +66,7 @@
     font-size: 14px;
 }
 
-.group-about {
+.event-about {
     display: flex;
     color: grey;
     font-size: 18px;
