--- a/frontend/src/components/GroupDetails/GroupDetails.css
+++ b/frontend/src/components/GroupDetails/GroupDetails.css
@@ -38,8 +38,8 @@
     align-items: center;
     height: 66px;
     padding: 0px 0px 0px 500px;
-    border-bottom: 0.5px solid grey;
-    border-top: 0.5px solid grey;
+    border-bottom: 0.5px solid rgba(34, 34, 34, 0.2);
+    border-top: 0.5px solid rgba(34, 34, 34, 0.2);
 }
 
 .bottom-container {
@@ -66,9 +66,9 @@
 .name {
     display: flex;
     text-align: left;
-    font-size: 32px;
-    font-weight: bold;
+    font-size: 25px;
     padding-bottom: 20px;
+    font-weight: bold;
 }
 
 .location {
