--- a/frontend/src/components/Groups/Groups.css
+++ b/frontend/src/components/Groups/Groups.css
@@ -5,12 +5,17 @@
 }
 
 .group-card {
-    border-top: 0.5px solid grey;
+    border-top:  0.5px solid rgba(34, 34, 34, 0.2);
     display: flex;
     flex-direction: row;
     width: 640px;
     height: 160px;
     padding: 20px 0px 0px 0px;
+    
+}
+
+.group-card:last-child {
+    border-bottom:  0.5px solid rgba(34, 34, 34, 0.2);
 }
 
 .top-container {
