--- a/frontend/src/components/EventDetails/EventDetails.css
+++ b/frontend/src/components/EventDetails/EventDetails.css
@@ -21,9 +21,8 @@
 }
 
 .bottom-bar {
-    display: flex;
-    flex-direction: column;
-    align-items: left;
+    width: 600px;
+    padding: 16px 0px;
 }
 
 .event-private {
@@ -38,6 +37,7 @@
 
 .about {
     font-size: 16px;
+    padding: 6px;
 }
 
 .host-name {
