--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,3 +55,21 @@ ul {
     height: 100%;
     border-radius: 8px;
 }
+.Warning {
+    font-size: 18px;
+}
+.warning-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    width: 500px;
+    height: 200px;
+    margin: auto;
+    padding-top: 200px;
+}
+.back-to-homepage{
+    text-decoration: none;
+    color:#f65858;
+    cursor: pointer;
+}
