--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -59,8 +59,8 @@
     display: flex;
     align-items: center;
     margin-right: 40px;
-    cursor: pointer;
 }
+
 
 .logo {
     height: 50px;
@@ -88,6 +88,7 @@
     color: white;
     align-content: center;
     font-weight: bold;
+    cursor: pointer
 }
 
 .right-navbar {
